[tool.poetry]
name = "projet-api"
version = "0.1.0"
description = ""
authors = ["morganjowitt <jowitt.morgan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
jwt = "^1.3.1"
pyjwt = "^2.9.0"
black = "^24.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
